# freeflyer2

./: .gitignore  ConstVelKF  ConstVelKF.cpp  ConstVelKF1.cpp  README.md  bags_import.ipynb  pyproject.toml
.github/workflows/: foxy.yml  humble.yml  iron.yml  main.yml  rolling.yml
ff_control/: CMakeLists.txt  package.xml
ff_control/ff_control/: Lowll_ctrl.py  __init__.py  joystick_ctrl.py  keyboard_ctrl.py  linear_ctrl.py  ll_binary_ctrl.py  ll_ctrl.py  tri_thruster_ctrl.py  utils.py  wrench_ctrl.py
ff_control/ff_control/transformer_controller/: art.py  ff_scenario.py  freeflyer.py  ros_art_closed_loop.py  ros_manage.py
ff_control/include/ff_control/: Lowll_ctrl.hpp  keyboard_ctrl.hpp  linear_ctrl.hpp  ll_ctrl.hpp  pwm_ctrl.hpp  wrench_ctrl.hpp
ff_control/scripts/: dynamics_sim.py  joy_teleop_py_node  key_teleop_py_node  ll_ctrl_test.py  mpc_ctrl_py_node  opt_ctrl_py_node  pd_ctrl_py_node  safe_teleop_py_node  safety_filter  scp_mpc_ctrl_py_node  scp_pd_ctrl_py_node  tto_scp_cl_ctrl_py_node  tto_scp_mpc_ctrl_py_node  tto_scp_pd_ctrl_py_node
ff_control/src/: Lowll.cpp  force_torque_ctrl_node.cpp  key_teleop_node.cpp  keyboard_ctrl.cpp  linear_ctrl.cpp  ll_ctrl.cpp  pd_ctrl_node.cpp  pwm_ctrl.cpp  wrench_ctrl.cpp  wrench_ctrl_node.cpp
ff_control/src/nodes/: key_teleop_node.cpp  pd_ctrl_node.cpp  pwm_ctrl_node.cpp  safety_filter.py  wrench_ctrl_node.cpp
ff_control/tranformer_controller/dataset_generation/: dataset_pargen.py
ff_control/tranformer_controller/decision_transformer/: dagger_training_tracker.ipynb  main_eval_compact.ipynb  main_train.ipynb  manage.py  ros_manage.py  test_closed_loop.ipynb
ff_control/tranformer_controller/dynamics/: file.ipynb  freeflyer.py
ff_control/tranformer_controller/optimization/: ff_scenario.py
ff_control/transformer_controller/: README.md  final_time_diversity_plotting.ipynb  obs_diversity_analysis_plotting.ipynb
ff_control/transformer_controller/dataset_generation/: dataset_pargen.py  dataset_pargen_time.py  preprocessing.py  preprocessing_time.py
ff_control/transformer_controller/decision_transformer/: art.py  art_closed_loop.py  art_closed_loop_new.py  dagger_training.py  dagger_training_exp_art.py  dagger_training_exp_art_new.py  dagger_training_tracker.ipynb  main_eval_compact.ipynb  main_eval_compact_time.ipynb  main_train.ipynb  main_train.py  main_train_no_generalization.ipynb  main_train_time.ipynb  main_train_time.py  main_train_time_no_standby.py  main_train_time_no_ttg_pred.py  manage.py  manage_new.py  manage_time.py  ros_manage.py  test_closed_loop.ipynb  test_closed_loop_new.ipynb  test_closed_loop_time.ipynb
ff_control/transformer_controller/dynamics/: FreeflyerEnv.py  FreeflyerEnv_new.py  file_time.ipynb  freeflyer.py  freeflyer_new.py  freeflyer_time.py
ff_control/transformer_controller/optimization/: ff_scenario.py  ff_scenario_new.py  ff_scenario_time.py  obstacles_placing_tool.ipynb  plotting_warmstarting_analysis.ipynb  warmstarting_analysis.py  warmstarting_analysis_time.py
ff_drivers/: CMakeLists.txt  README.md  package.xml
ff_drivers/include/ff_drivers/: gpio.hpp  pwm.hpp
ff_drivers/launch/: hardware_bringup.launch.py  rs_d455.launch.py  test_all_thrusters.launch.py
ff_drivers/src/: gpio.cpp  pwm.cpp  test_single.cpp  thruster_node.cpp  thruster_pwm_node.cpp
ff_drivers/src/tests/: test_all_thrusters.cpp  test_multi.cpp  test_single.cpp
ff_estimate/: CMakeLists.txt  ConstVelKF.cpp  package.xml
ff_estimate/include/ff_estimate/: base_estimator.hpp  base_mocap_estimator.hpp  pose2d_estimator.hpp
ff_estimate/src/: ConstVelKF.cpp  ConstVelKF1.cpp  base_estimator.cpp  base_mocap_estimator.cpp  kalman_filter_node.cpp  kfilter.py  mocap_estimator_node.cpp  moving_avg_estimator_node.cpp  pose2d_estimator.cpp  pose2d_estimator_filtered.cpp
ff_msgs/: CMakeLists.txt  package.xml
ff_params/: CMakeLists.txt  package.xml
ff_params/ff_params/: __init__.py
ff_params/include/ff_params/: robot_params.hpp
ff_params/src/: robot_params.cpp  robot_params_node.cpp
ff_path_planning/: README.md  package.xml  setup.cfg  setup.py
ff_path_planning/ff_path_planning/: __init__.py  example.py  import_costs_and_dynamics.py  path_planning.py  simple_goal.py  simple_plan_planning.py
ff_path_planning/ff_path_planning/costs/: default_cost.py  my_cost.py
ff_path_planning/ff_path_planning/dynamics/: single_integrator.py  single_integrator_2D.py
ff_path_planning/ff_path_planning/examples/: path_planning.py  service_call.py  setting_goal.py
ff_sim/: package.xml  setup.cfg  setup.py
ff_srvs/: CMakeLists.txt  package.xml
ff_viz/: CMakeLists.txt  package.xml
ff_viz/launch/: ff_viz.launch.py
ff_viz/model/: ff.urdf
ff_viz/rviz/: default.rviz
ff_viz/src/: renderer_node.cpp
freeflyer/: CMakeLists.txt  README.md  package.xml
freeflyer/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
freeflyer/install/freeflyer/share/ament_index/resource_index/parent_prefix_path/: freeflyer
freeflyer/install/freeflyer/share/freeflyer/: local_setup.sh  package.bash  package.dsv  package.sh
freeflyer/install/freeflyer/share/freeflyer/cmake/: freeflyerConfig.cmake
freeflyer/launch/: estimation_viz.launch.py  hardware_joy_safe.launch.py  hardware_opt.launch.py  hardware_pd.launch.py  hardware_scp.launch.py  hardware_scp_mpc.launch.py  hardware_tto_mpc.launch.py  hardware_tto_scp.launch.py  mocap.launch.py  sim_MPC.launch.py  sim_joy_safe.launch.py  sim_joy_teleop.launch.py  sim_key_teleop.launch.py  sim_opt.launch.py  sim_path_planner.launch.py  sim_path_planning.launch.py  sim_pd.launch.py  sim_scp.launch.py  sim_scp_mpc.launch.py  sim_tto_mpc.launch.py  sim_tto_scp.launch.py
freeflyer/log/: latest_build
freeflyer/test/: black_formatting.py  opt_ctrl_launch_test.py  pd_ctrl_launch_test.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_test  latest_test-result
plotjugglertemplates/: freeflyerstatescost.xml
testing_files/: freeflyerstatescost.xml  hardwarefreeflyerstatescost.xml  injectGoalPose.py  inject_goal_pose.py  unpackRosBag.py
(+485 files in other folders)
