<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ff_drivers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="odroid@todo.todo">odroid</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ff_msgs</depend>

  <exec_depend>ff_control</exec_depend>
  <exec_depend>ff_params</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>vrpn_mocap</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
