<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ff_path_planning</name>
  <version>0.0.0</version>
  <description>MPC Path Planning Service</description>
  <maintainer email="rdyro@stanford.edu">rdyro</maintainer>
  <license>MIT License</license>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ff_srvs</depend>
  <depend>python3-scipy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
