<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freeflyer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alvinsunyixiao@gmail.com">alvin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ff_estimate</exec_depend>
  <exec_depend>ff_control</exec_depend>
  <exec_depend>ff_msgs</exec_depend>
  <exec_depend>ff_params</exec_depend>
  <exec_depend>ff_sim</exec_depend>
  <exec_depend>ff_viz</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
